--- a/Monitoring dan Logging/prometheus.yml
+++ b/Monitoring dan Logging/prometheus.yml
@@ -2,10 +2,6 @@ global:
   scrape_interval: 5s
 
 scrape_configs:
-  - job_name: "inference"
-    static_configs:
-      - targets: ["localhost:8000"]
-
-  - job_name: "exporter"
+  - job_name: "fastapi-ml"
     static_configs:
       - targets: ["localhost:8001"]
